# megacommerce-products

./: .dockerignore  Cargo.toml  Dockerfile.dev  config.dev.yaml  config.local.yaml  config.yaml
.github/workflows/: build.yml
.sqlx/: query-090f5b71dfa62910389af0fdae094a8f5e2846a450c281fa7b97addd4d21cb69.json  query-1dad1a4c31a1be255e3bf52a1707da73f5ebfe87b1460d2604475d791b88e74d.json  query-23b2c9946bfb89933cf676d924825d071a4ee798dae02862a224bfae39df7c2f.json  query-2b937bbd3551b5b7012b626c9084f333d63dbab5aef6c927b30eb804724d84a6.json  query-53b5c8628f4ebdabcf04c36f5b1009ae002fef85fe43260c463790df44bfbeab.json  query-624a4db6e97298ec342adb499307e3827cbec6a7605fb3f1388eca309fd614f4.json  query-87bae5e6d57fd571caad5f53dc34239195627d24355f87aed67b01cdc4590c8c.json  query-b783d72a20384e306a8d508c6db1bb36fc5ada2f1e16f440437cc86a95b38344.json  query-f000f6de0279e719260d567d7b118cbd0486f2a77e70cef47b8c7589634baabd.json
src/: lib.rs  main.rs
src/common/: config.rs  init.rs  main.rs  mod.rs  trans.rs
src/controller/: audit.rs  best_selling_products.rs  big_discount_products.rs  category_navbar.rs  helpers.rs  hero_products.rs  main.rs  metrics.rs  middleware.rs  mod.rs  newly_added_products.rs  product_create.rs  product_data.rs  product_details.rs  product_list.rs  product_snapshot.rs  products_category.rs  products_create.rs  products_list.rs  products_to_like.rs  router.rs
src/data/: currencies.rs
src/models/: audit.rs  config.rs  context.rs  errors.rs  mod.rs  product_create.rs  products.rs  products_create.rs  time.rs  trans.rs
src/otel/: mod.rs
src/server/: config.rs  database.rs  getters.rs  main.rs  mod.rs  object_storage.rs  server.rs
src/store/: cache.rs  database.rs
src/store/cache/: categories.rs  tags.rs
src/store/database/: dbstore.rs  errors.rs
src/store/database/dbstore/: best_selling_products.rs  big_discount_products.rs  category_navbar.rs  hero_products.rs  newly_added_products.rs  product_create.rs  product_details.rs  product_list.rs  product_snapshot.rs  products_category.rs  products_list.rs  products_to_like.rs  router.rs
src/utils/: mod.rs  net.rs  slug.rs
