[package]
name = "megacommerce-products"
version = "0.1.11"
edition = "2024"

[dependencies]
chrono = "0.4.41"
derive_more = { version = "2.0.1", features = ["display"] }
http = "1.3.1"
megacommerce-proto = "0.1.12"
regex = "1.11.1"
scopeguard = "1.2.0"
serde = { version = "1.0.219" , features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "json"] }
tera = "1.20.0"
thiserror = "2.0.12"
tokio = {version = "1.45.1", features = ["full"]}
tonic = "0.13.1"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ulid = "1.2.1"
unidecode = "0.3.0"

[features]
bench = []

[profile.bench]
debug = true
