[package]
name = "megacommerce-products"
version = "0.1.11"
edition = "2024"

[dependencies]
## core
megacommerce-proto = "0.3.71"
megacommerce-shared = "0.4.72"
tokio = { version = "1.45.1", features = ["full"] }
tonic = "0.13.1"
tower = "0.5.2"
http = "1.3.1"
tera = "1.20.0"
image = "0.25.8"
aws-sdk-s3 = "1.111.0"
aws-config = "1.8.10"
aws-credential-types = "1.2.8"
rust_decimal = "1.37.2"
bigdecimal = "0.4.8"
parking_lot = "0.12.5"
dashmap = "6.1.0"
lazy_static = "1.5.0"
base64 = "0.22.1"

## serialize/deserialize
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"

## databse
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio",
  "json",
  "bigdecimal",
] }

## macros
thiserror = "2.0.12"
chrono = "0.4.41"
derive_more = { version = "2.0.1", features = ["display"] }

## utils
ulid = "1.2.1"
unidecode = "0.3.0"
scopeguard = "1.2.0"
regex = "1.11.1"

# logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"


[features]
bench = []

[profile.bench]
debug = true
